--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 <!-- Navigation Bar -->
 <!-- Main Body -->
             <div class="main_content_body">
-                <li><a href="https://drive.google.com/file/d/1_6mZB3xjnimBOwjCTtsaejTziyNfVQMG/view?usp=sharing">Topics_arihant</a></li>
+                <li><a href="https://drive.google.com/file/d/1_6mZB3xjnimBOwjCTtsaejTziyNfVQMG/view?usp=sharing">CLASS 12<SUP>th</SUP>TERM TWO 'ARIHANT'</a></li>
+                <li><a href="https://drive.google.com/file/d/103JNczuKCjubVexNnurgpqxk7DBTsVCH/view?usp=sharing">QUICK REVISION NCERT <b>CHEMISTRY</b></a></li>
+                <li><a href="https://drive.google.com/file/d/1MwQT3tLJBs5zOMLibKX9th8aqOD7hC1V/view?usp=sharing">QUICK REVISION NCERT <b>MATHEMATICS</b></a></li>
             </div>
 <!-- Main Body -->
 
