--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div id="nav_bar">
                 <ul>
                     <li><a href="index.html" target="">Home</a></li>
-                    <li><a href="Subject.html" target="_blank">Subject</a></li>
+                    <li><a href="Classes.html" target="_blank">Classes</a></li>
                     <li><a href="About_Us.html" target="_blank">About Us</a></li>
                     <li><a href="Contact_Us.html" target="_blank">Contact Us</a></li>
 
@@ -35,6 +35,7 @@
                 <li><a href="https://drive.google.com/file/d/103JNczuKCjubVexNnurgpqxk7DBTsVCH/view?usp=sharing" target="_blank">QUICK REVISION NCERT <b>CHEMISTRY</b></a></li>
                 <li><a href="https://drive.google.com/file/d/1MwQT3tLJBs5zOMLibKX9th8aqOD7hC1V/view?usp=sharing" target="_blank">QUICK REVISION NCERT <b>MATHEMATICS</b></a></li>
             </div>
+            
 <!-- Main Body -->
 
         </div>
