--- a/Classes.html
+++ b/Classes.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>LN - HTML</title>
+    <title>LN-Subject</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 
@@ -21,8 +21,8 @@
 <!-- Navigation Bar -->
             <div id="nav_bar">
                 <ul>
-                    <li><a href="Homepage.html" target="">Home</a></li>
-                    <li><a href="Subject.html" target="">Subject</a></li>
+                    <li><a href="index.html" target="">Home</a></li>
+                    <li><a href="" target="">Classes</a></li>
                     <li><a href="About_Us.html" >About Us</a></li>
                     <li><a href="Contact_Us.html" >Contact Us</a></li>
 
@@ -31,12 +31,17 @@
 <!-- Navigation Bar -->
 <!-- Main Body -->
             <div class="main_content_body">
-                <div class="style_aboutus">
+             <!-- Subject    -->
+                <div class="style_aboutus ul li a">
+                    <h2>Classes</h2>
                     <ul>
-                        <li><a href="CS/html/basic intro.txt">Basic Introduction</a></li>
+                        <li><a href="" target="_blank">IX</a></li>
+                        <li><a href="" target="_blank">X</a></li>
+                        <li><a href="" target="_blank">XI</a></li>
+                        <li><a href="" target="_blank">XII</a></li>
                     </ul>
-                </div>
             </div>
+            <!-- Subject    -->
 <!-- Main Body -->
 
         </div>
