--- a/Contact_Us.html
+++ b/Contact_Us.html
@@ -22,7 +22,7 @@
             <div id="nav_bar">
                 <ul>
                     <li><a href="index.html" target="">Home</a></li>
-                    <li><a href="Subject.html">Subject</a></li>
+                    <li><a href="Classes.html">Classes/a></li>
                     <li><a href="About_Us.html" >About Us</a></li>
                     <li><a href="Contact_Us.html" >Contact Us</a></li>
 
