--- a/Mathematics.html
+++ b/Mathematics.html
@@ -21,8 +21,8 @@
 <!-- Navigation Bar -->
             <div id="nav_bar">
                 <ul>
-                    <li><a href="Homepage.html">Home</a></li>
-                    <li><a href="Subject.html">Subject</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="Classes.html">Classes</a></li>
                     <li><a href="About_Us.html" >About Us</a></li>
                     <li><a href="Contact_Us.html" >Contact Us</a></li>
 
