--- a/Classes.html
+++ b/Classes.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>LN-Subject</title>
+    <title>LN-Classes</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 
