--- a/Classes.html
+++ b/Classes.html
@@ -35,7 +35,7 @@
                 <div class="style_aboutus ul li a">
                     <h2>Classes</h2>
                     <ul>
-                        <li><a href="" target="_blank">IX</a></li>
+                        <li><a href="IX.html" target="_blank">IX</a></li>
                         <li><a href="" target="_blank">X</a></li>
                         <li><a href="" target="_blank">XI</a></li>
                         <li><a href="" target="_blank">XII</a></li>
