--- a/MathIX.html
+++ b/MathIX.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>LN-IX</title>
+    <title>LN-Classes</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 
@@ -33,10 +33,16 @@
             <div class="main_content_body">
              <!-- Subject    -->
                 <div class="style_aboutus ul li a">
-                    <h2>Class IX</h2>
+                    <h2>Class IX - Mathematics</h2>
+
                     <ul>
-                        <li><a href="MathIX.html">Mathematics</a></li>
-                        <li><a href="">Physics</a></li>
+                        <li><a href="https://physicscatalyst.com/download/CBSE_Maths_formula_Class9.pdf"></a>Real Number</li>
+                        <li><a href="https://physicscatalyst.com/download/CBSE_Maths_formula_Class9.pdf"></a>Polinomial Expression</li>
+                        <li><a href="https://physicscatalyst.com/download/CBSE_Maths_formula_Class9.pdf"></a>CoGeometry</li>
+                        <li><a href="https://physicscatalyst.com/download/CBSE_Maths_formula_Class9.pdf"></a>Co-ordinate Geometry</li>
+                        <li><a href="https://physicscatalyst.com/download/CBSE_Maths_formula_Class9.pdf"></a>Mensuration</li>
+                        <li><a href="https://physicscatalyst.com/download/CBSE_Maths_formula_Class9.pdf"></a>Statistics</li>
+                        <li><a href="https://physicscatalyst.com/download/CBSE_Maths_formula_Class9.pdf"></a>Probability</li>
                     </ul>
             </div>
             <!-- Subject    -->
