--- a/card.html
+++ b/card.html
@@ -11,9 +11,9 @@
         <b><img src="https://japanpowered.com/media/images//goku.png" class="card-img-top" alt="..."></b>
         <div class="card-body">
             <div align="justify">
-                <h5 class="card-title">Son Goku</h5>
-                <p class="card-text">Thats him my man goku from dragon ball Z</p>
-                <a href="https://en.wikipedia.org/wiki/Goku" class="btn btn-primary">Read about GOKU</a>
+                <h5 class="card-title">Mother Funder</h5>
+                <p class="card-text">CLASS 12<SUP>th</SUP>TERM TWO 'ARIHANT'</p>
+                <a href="https://drive.google.com/file/d/1_6mZB3xjnimBOwjCTtsaejTziyNfVQMG/view?usp=sharing" class="btn btn-primary">read book</a>
                 <br>
 
             </div>
