--- a/Classes.html
+++ b/Classes.html
@@ -35,10 +35,10 @@
                 <div class="style_aboutus ul li a">
                     <h2>Classes</h2>
                     <ul>
-                        <li><a href="IX.html" target="_blank">IX</a></li>
-                        <li><a href="" target="_blank">X</a></li>
-                        <li><a href="" target="_blank">XI</a></li>
-                        <li><a href="" target="_blank">XII</a></li>
+                        <li><a href="MathIX.html" target="_blank"><b>CLASS 9<sup>th</sup></b></a></li>
+                        <li><a href="X.html" target="_blank"><b>CLASS 10<sup>th</sup></b></a></li>
+                        <li><a href="XI.html" target="_blank"><b>CLASS 11<sup>th</sup></b></a></li>
+                        <li><a href="XII.html" target="_blank"><b>CLASS 12<sup>th</sup></b></a></li>
                     </ul>
             </div>
             <!-- Subject    -->
