--- a/MathIX.html
+++ b/MathIX.html
@@ -22,7 +22,7 @@
             <div id="nav_bar">
                 <ul>
                     <li><a href="index.html" target="">Home</a></li>
-                    <li><a href="" target="">Classes</a></li>
+                    <li><a href="Classes.html" target="">Classes</a></li>
                     <li><a href="About_Us.html" >About Us</a></li>
                     <li><a href="Contact_Us.html" >Contact Us</a></li>
 
@@ -33,16 +33,21 @@
             <div class="main_content_body">
              <!-- Subject    -->
                 <div class="style_aboutus ul li a">
-                    <h2>Class IX - Mathematics</h2>
+                    <h2>Class 9<sup>th</sup> - Mathematics</h2>
 
                     <ul>
-                        <li><a href="https://physicscatalyst.com/download/CBSE_Maths_formula_Class9.pdf"></a>Real Number</li>
-                        <li><a href="https://physicscatalyst.com/download/CBSE_Maths_formula_Class9.pdf"></a>Polinomial Expression</li>
-                        <li><a href="https://physicscatalyst.com/download/CBSE_Maths_formula_Class9.pdf"></a>CoGeometry</li>
-                        <li><a href="https://physicscatalyst.com/download/CBSE_Maths_formula_Class9.pdf"></a>Co-ordinate Geometry</li>
-                        <li><a href="https://physicscatalyst.com/download/CBSE_Maths_formula_Class9.pdf"></a>Mensuration</li>
-                        <li><a href="https://physicscatalyst.com/download/CBSE_Maths_formula_Class9.pdf"></a>Statistics</li>
-                        <li><a href="https://physicscatalyst.com/download/CBSE_Maths_formula_Class9.pdf"></a>Probability</li>
+                        <li><a href="https://physicscatalyst.com/download/CBSE_Maths_formula_Class9.pdf"><b>Real Number</b></a></li>
+                        <li><a href="https://physicscatalyst.com/download/CBSE_Maths_formula_Class9.pdf"><b>Polinomial Expression</b></a></li>
+                        
+                        <li><a href="https://physicscatalyst.com/download/CBSE_Maths_formula_Class9.pdf"><b>Co-ordinate Geometry</b></a></li>
+                        <li><a href="https://physicscatalyst.com/download/CBSE_Maths_formula_Class9.pdf"><b>Linier Equtaions In Tow Variables</b></a></li>
+                        <li><a href="https://physicscatalyst.com/download/CBSE_Maths_formula_Class9.pdf"><b>Lines And Angles</b></a></li>
+                        <li><a href="https://physicscatalyst.com/download/CBSE_Maths_formula_Class9.pdf"><b>Triangles</b></a></li>
+                        <li><a href="https://physicscatalyst.com/download/CBSE_Maths_formula_Class9.pdf"><b>Quadrilaterals</b></a></li>
+                        <li><a href="https://physicscatalyst.com/download/CBSE_Maths_formula_Class9.pdf"><b>Circles</b></a></li>
+                        <li><a href="https://physicscatalyst.com/download/CBSE_Maths_formula_Class9.pdf"><b>Surface Area And Volume</b></a></li>
+                        <li><a href="https://physicscatalyst.com/download/CBSE_Maths_formula_Class9.pdf"><b>Statistics</b></a></li>
+                        <li><a href="https://physicscatalyst.com/download/CBSE_Maths_formula_Class9.pdf"><b>Probability</b></a></li>
                     </ul>
             </div>
             <!-- Subject    -->
