--- a/Contact_Us.html
+++ b/Contact_Us.html
@@ -22,9 +22,9 @@
             <div id="nav_bar">
                 <ul>
                     <li><a href="index.html" target="">Home</a></li>
-                    <li><a href="Classes.html">Classes/a></li>
-                    <li><a href="About_Us.html" >About Us</a></li>
-                    <li><a href="Contact_Us.html" >Contact Us</a></li>
+                    <li><a href="Classes.html">Classes</a></li>
+                    <li><a href="About_Us.html">About Us</a></li>
+                    <li><a href="Contact_Us.html">Contact Us</a></li>
 
                 </ul>
             </div>
