--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>LEARNING CENTER</title>
+    <link rel="icon" type="images/x-icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTkGd9GSulS4qpbIDP-h4wYSB0RhlSFm9QPFg&usqp=CAU" />
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 
