--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <br>
                 <div class="cards">   
                     <h3 class="heading_main_content_body"> Class 12<sup>th</sup> RD Sharma</h3>
-                    <a href="https://drive.google.com/file/d/1QcQDuMurlgnJS5-KFQiGV1vaa5PjDSlC/view?usp=sharing" target="_blank"><img class="img" src="https://www.raajkart.com/media/catalog/product/cache/1/image/800x800/9df78eab33525d08d6e5fb8d27136e95/d/h/dha1.jpg"></a>
+                    <a href="https://drive.google.com/file/d/1QcQDuMurlgnJS5-KFQiGV1vaa5PjDSlC/view?usp=sharing" target="_blank"><img class="img" src="https://4.imimg.com/data4/VK/VX/MY-3291959/r-d-sharma-maths-for-12th-std-cbse-500x500.jpg"></a>
                     <p>RD Sharma Solutions are the best study resource a student can get in order to score high marks in the Maths examination. The RD Sharma book is a gem for Mathematics lovers. It is one of the best books that provide complete information and knowledge of each and every concept that prepares students to face all kinds of questions, irrespective of their difficulty.</p>
                 </div>     
                     <br>
